# constructivism

./: Cargo.toml  README.md
crates/constructivism_macro/: Cargo.toml  README.md
crates/constructivism_macro/src/: lib.rs
crates/constructivism_macro_gen/: Cargo.toml  README.md
crates/constructivism_macro_gen/src/: constructivism_macro.include  lib.rs
crates/constructivist/: Cargo.toml  README.md
crates/constructivist-core/: Cargo.toml
crates/constructivist-core/src/: lib.rs
crates/constructivist/src/: construct.rs  context.rs  core.include  derive.rs  exts.rs  genlib.rs  lib.rs  proc.rs  throw.rs
crates/constructivist_core/: Cargo.toml
crates/constructivist_core/src/: lib.rs
crates/constructivist_macro_support/: Cargo.toml
crates/constructivist_macro_support/src/: buildlib.rs  derive.rs  lib.rs  synext.rs
examples/: animals.rs  construct.rs  constructable.rs  flattern.rs  inheritance.rs  methods.rs  props.rs  tutorial.rs
examples/stranger/: Cargo.toml
src/: core.rs  idea.rs  lib.rs  tests.rs
