[package]
name = "constructivist"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/constructivist_core",
    "crates/constructivist_macro_support",
]

[dependencies]
constructivist_core = { path = "crates/constructivist_core" }
constructivist_macro_support = { path = "crates/constructivist_macro_support" }
tuple_utils = "0.4.0"
