[package]
name = "constructivism"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/constructivism_macro",
    "crates/constructivism_macro",
    
    "examples/stranger",
]

[dependencies]
constructivism_macro = { path = "crates/constructivism_macro" }
tuple_utils = "0.4.0"
