[package]
name = "constructivism"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Simplify the construction of structured data."
homepage = "https://github.com/polako-rs/constructivism"
repository = "https://github.com/polako-rs/constructivism"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/constructivism_macro",
    "crates/constructivism_macro",
    "crates/constructivism_macro_gen",
    
    "examples/stranger",
]

[dependencies]
constructivism_macro = { path = "crates/constructivism_macro", version = "0.0.1"}
tuple_utils = "0.4.0"
