[package]
name = "constructivism_macro"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Simplify the construction of structured data."
homepage = "https://github.com/polako-rs/constructivism/tree/main/crates/constructivism_macro"
repository = "https://github.com/polako-rs/constructivism"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full"]}
toml = "0.7.6"
constructivist = { path = "../constructivist", version = "0.0.1"}
